# MessageRouter

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Doxyfile  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  demo.sh  docker-compose.yml  run_all_tests.sh
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml  security.yml
benchmarks/: CMakeLists.txt  memory_allocation.cpp  queue_performance.cpp  routing_latency.cpp  run_all_benchmarks.cpp  run_all_benchmarks.sh  scaling_benchmark.cpp  simple_benchmark.cpp
configs/: baseline.json  burst_pattern.json  ordering_stress.json  strategy_bottleneck.json
docs/: architecture.md  configuration.md  performance.md
include/: config.h  lockfree_queue.h  message.h  monitor.h  ordering_buffer.h  processor.h  producer.h  stage1_router.h  stage2_router.h  strategy.h
src/: config.cpp  lockfree_queue.cpp  main.cpp  message.cpp  monitor.cpp  ordering_buffer.cpp  processor.cpp  producer.cpp  stage1_router.cpp  stage2_router.cpp  strategy.cpp
